hphp/hack/test/typecheck/async_function_untyped2.php.exp
File "async_function_untyped2.php", line 11, characters 7-12:
This expression is of type `Awaitable`, but it's either being discarded or used in a dangerous way before being awaited (Typing[4015])
  File "async_function_untyped2.php", line 4, characters 32-32:
  This is why I think it is `Awaitable`
File "async_function_untyped2.php", line 4, characters 32-32:
Was expecting a return type hint (Typing[4030])
